--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ajv": "^6.5.1",
     "lodash": "^4.17.10",
+    "uniqid": "^5.0.3",
     "ws": "^5.2.0"
   },
   "devDependencies": {
